# cog-assembly

./: .gitignore  Dockerfile  README.md  config_template.yaml  main.py  pyproject.toml  services_template.yaml  settings_template.yaml
app/: admin.py  database.py  main.py  manager.py  metrics.py  models.py  password.py
cog_asembly/: manager.py  metrics.py  utils.py
tests/: test.sh
