[project]
name = "cog-assembly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=6.2.6",
    "dacite>=1.9.2",
    "docker>=7.1.0",
    "fastapi>=0.128.0",
    "humanize>=4.15.0",
    "itsdangerous>=2.0.0",
    "loguru>=0.7.0",
    "nvidia-ml-py>=13.590.48",
    "prometheus-client>=0.24.1",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "sqladmin>=0.16.0",
]


[project.scripts]
run = "uvicorn app.main:app"
